SERVER-50834 Initialize _bufferIt in SBE spool stages